src/test/deca/context/invalid/renduInter01/02affectation_condition.deca
// Description:
//      Instruction conditionnelle if...else
//      Test d'expression conditionnelle avec affectation "="
//
// Resultats:
//      ok, x=18

{
    int x = 2;
    if ( x = 18 ) {
        println("ok, x=", x);
    } else {
        print("erreur");
    }
}
